--- a/css/style.css
+++ b/css/style.css
@@ -497,7 +497,7 @@ a.popup-with-zoom-anim img {
 /*---team-members--*/
 .team-members{
 	padding: 7% 0;
-	background: #F8BC3A;
+	background: #2A80B9;
 }
 .tm-head{
 	text-align:center;
@@ -554,11 +554,7 @@ a.popup-with-zoom-anim img {
 	font-weight: 400;
 	margin: 0.8em 0 0.2em 0;
 }
-.tm-head-grid h5{
-	color: #7C3939;
-	margin: 0 auto;
-	font-size: 1em;
-}
+
 /*---//team-members--*/
 /*----team-info----*/
 .team-info{
@@ -762,66 +758,10 @@ a.popup-with-zoom-anim img {
 	-o-border-radius: 10px;
 }
 /*---//experience--*/
-/*---fun--*/
-.fun{
-	padding: 7% 0;
-	background: #2A80B9;
-}
-.fun-head{
-	text-align:center;
-}
-.fun-head h3{
-	font-family: 'Noto Sans', sans-serif;
-	color: #fff;
-	font-size: 2.5em;
-	font-weight: 500;
-	text-align: center;
-}
-.fun-head-grids {
-	text-align: center;
-	margin:0 auto;
-}
-.fun-head-grid img {
-	padding: 50px;
-	background: #fff;
-	cursor: pointer;
-	 border-radius: 10px;
- 	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	-o-border-radius: 10px;
-	-webkit-transition: all 1s ease;
-	-moz-transition: all 1s ease;
-	-o-transition: all 1s ease;
-	transition: all 1s ease;
-}
-.fun-head-grid img:hover {
-	opacity: 0.6;
-}
-.fun-head-grid {
-	text-align: center;
-	display: inline-block;
-	margin-right: 2%;
-	padding-top: 14px;
-}
-.fun-head-grid:nth-child(4){
-	margin-right:0;
-}
-.fun-head-grid h4{
-	color: #FFF;
-	font-size: 2.2em;
-	font-weight: 400;
-	margin: 3% 0;
-}
-.fun-head-grid h5{
-	color: #E9E4E4;
-	margin: 0 auto;
-	font-size: 1.1em;
-}
-/*---//fun--*/
 /*---studio--*/
 .studio{
 	padding: 7% 0;
-	background: #DB5941;
+	background: #2A80B9;
 	text-align: center;
 }
 .studio-head{
@@ -926,26 +866,53 @@ display:none;
 }
 /*---//End-trust-----*/
 /* contact */
-.contact{
-	padding: 7% 0;
-	background: #01509E;
-	text-align:center;
+.contact {
+    padding: 7% 0;
+    background: #01509E;
+    text-align: center;
 }
-.contact h3{
-	font-family: 'Noto Sans', sans-serif;
-	color: #fff;
-	font-size: 2.5em;
-	font-weight: 700;
-	text-align: center;
+
+.contact h3 {
+    font-family: 'Noto Sans', sans-serif;
+    color: #fff;
+    font-size: 2.5em;
+    font-weight: 700;
+    text-align: center;
 }
-.contact p{
-	font-family: 'Noto Sans', sans-serif;
-	font-size: 1.4em;
-	padding: 0em 0;
-	color: #E4E4E4;
-	line-height: 1.5em;
-	text-align:center;
-	margin-bottom: 6%;
+
+.contact p {
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 1.4em;
+    padding: 0em 0;
+    color: #E4E4E4;
+    line-height: 1.5em;
+    text-align: center;
+    margin-bottom: 6%;
+}
+
+.contact-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 15px;
+    margin-bottom: 20px;
+}
+
+.subscribe-button {
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: #29AECC;
+    color: white;
+    text-decoration: none;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 1.2em;
+    font-weight: 700;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    margin-top: 10px
+}
+
+.subscribe-button:hover {
+    background-color: #007acc;
 }
 
 /*---start-footer---*/
