--- a/css/style.css
+++ b/css/style.css
@@ -761,7 +761,7 @@ a.popup-with-zoom-anim img {
 /*---studio--*/
 .studio{
 	padding: 7% 0;
-	background: #2A80B9;
+	background: #ffffff;
 	text-align: center;
 }
 .studio-head{
@@ -769,7 +769,7 @@ a.popup-with-zoom-anim img {
 }
 .studio-head h3{
 	font-family: 'Noto Sans', sans-serif;
-	color: #fff;
+	color: #000000;
 	font-size: 2.5em;
 	font-weight: 700;
 	text-align: center;
@@ -778,7 +778,7 @@ a.popup-with-zoom-anim img {
 	font-family: 'Noto Sans', sans-serif;
 	font-size: 1.4em;
 	padding: 0em 0;
-	color: #E4E4E4;
+	color: #000000;
 	line-height: 1.5em;
 	text-align:center;
 	margin-bottom: 6%;
@@ -897,8 +897,13 @@ display:none;
     margin-bottom: 20px;
 }
 
+.subscribe-button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
 .subscribe-button {
-    display: inline-block;
     padding: 12px 24px;
     background-color: #29AECC;
     color: white;
@@ -908,12 +913,12 @@ display:none;
     font-weight: 700;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-    margin-top: 10px
 }
 
 .subscribe-button:hover {
     background-color: #007acc;
 }
+
 
 /*---start-footer---*/
 .bottom-footer{
