--- a/css/slider.css
+++ b/css/slider.css
@@ -92,7 +92,7 @@
 	font-size: 3em;
 	font-weight: 500;
 	white-space: nowrap;
-	margin-left: 10%;
+	/* margin-left: 30%; */
 	z-index: 10;
 	text-align: center;
 }
@@ -107,7 +107,6 @@
 	font-size: 5em;
 	font-weight: 500;
 	white-space: nowrap;
-	margin-left: 5%;
 	z-index: 10;
 	text-align: center;
 }
@@ -762,14 +761,11 @@
 	.da-arrows span {
 		top: 43%;
 	}
-	.da-slide h2 {
-		margin-left: 15%;
-	}
+	/* .da-slide h2 {
+		margin-left: 31%;
+	} */
 	.da-slide p {
 		width: 84%;
-	}
-	.da-slide h3 {
-		margin-left: 9%;
 	}
 }
 @media only screen and (max-width: 1280px){
@@ -779,15 +775,13 @@
 	.da-arrows span {
 		top: 43%;
 	}
-	.da-slide h2 {
+	/* .da-slide h2 {
 		margin-left: 29%;
-	}
+	} */
 	.da-slide p {
-		width: 75%;
+		width: 83%;
 	}
-	.da-slide h3 {
-		margin-left: 3%;
-	}
+
 }
 @media only screen and (max-width: 1024px){
 	.da-dots {
@@ -797,17 +791,16 @@
 		height: 480px;
 	}
 	.da-slide .da-link {
-		margin-left: 20%;
+		margin-left: 30%;
 	}
 	.da-slide h2 {
 		font-size: 2em;
-		margin-left: 32%;
+		/* margin-left: 32%; */
 		top: 160px;
 	}
 	.da-slide h3 {
 		top: 190px;
 		font-size: 4em;
-		margin-left: 8%;
 	}	
 	.da-slide p {
 		font-size: 1.4em;
@@ -822,17 +815,16 @@
 		height: 480px;
 	}
 	.da-slide .da-link {
-		margin-left: 20%;
+		margin-left: 30%;
 	}
 	.da-slide h2 {
 		font-size: 1.5em;
-		margin-left: 3%;
+		/* margin-left: 32%; */
 		top: 160px;
 	}
 	.da-slide h3 {
 		top: 190px;
 		font-size: 3em;
-		margin-left: 3%;
 	}	
 	.da-slide p {
 		font-size: 1.2em;
@@ -862,17 +854,16 @@
 		height:310px;
 	}
 	.da-slide .da-link {
-		margin-left: 8%;
+		margin-left: 28%;
 	}
 	.da-slide h2{
 		font-size: 1.3em;
 		top: 105px;
-		margin-left: 3%;
+		/* margin-left: 31%; */
 	}
 	.da-slide h3 {
 		top: 134px;
 		font-size: 2em;
-		margin-left: 5%;
 	}	
 	.da-slide p {
 		font-size: 1em;
@@ -900,7 +891,7 @@
 		height:250px;
 	}
 	.da-slide .da-link {
-		margin-left: 8%;
+		margin-left: 28%;
 	}
 	.da-slide h2{
 		font-size: 1em;
@@ -909,7 +900,6 @@
 	.da-slide h3 {
 		top: 90px;
 		font-size: 1.5em;
-		margin-left: 15%;
 	}
 	.da-slide p{
 		top: 120px;
@@ -936,16 +926,16 @@
 		height: 230px;
 	}
 	.da-slide .da-link {
-		margin-left: 2%;
+		margin-left: 22%;
 	}
 	.da-slide h2 {
 		font-size: 0.8755em;
 		top: 51px;
-		margin-left: 23%;
+		/* margin-left: 23%; */
 	}
 	.da-slide h3 {
 		top: 67px;
-		font-size: 0.8em;
+		font-size: 1em;
 	}
 	.da-slide p{
 		top:89px;
