--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body {
 .nav-item a {
 	font-weight: 400;
 	padding: 10px;
-	background: #DE654E;
+	background: #0152a3;
 	text-transform: uppercase;
 	border-top: 1px ridge #CC722D;
 	color: #FFF;
@@ -319,36 +319,7 @@ a.button.scroll:hover {
 	margin-bottom: 6%;
 }
 /*---start container --*/
-#info {
-	-webkit-border-radius:5px;
-	-moz-border-radius:5px;
-	-o-border-radius:5px;
-	border-radius:5px;				
-	background:#fcf8e3;
-	border:1px solid  #fbeed5;
-	width:95%;
-	max-width:900px;
-	margin:0 auto 40px auto;
-	font-family:arial;
-	font-size:12px;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-o-box-sizing: border-box;
-}
-#info .info-wrapper {
-	padding:10px;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-o-box-sizing: border-box;
-}
-#info a {
-	color:#c09853;
-	text-decoration:none;
-}
-	
-#info p {
-	margin:5px 0 0 0;
-}
+
 .container { 
 	position: relative; 
 	-webkit-transition: all 1s ease;
@@ -464,7 +435,7 @@ a.popup-with-zoom-anim img {
 	transition: all 1s ease;
 }
 .img:hover {
-	border: 1px solid #DB5941
+	border: 1px solid #0152a3
 }
 /* Self Clearing Goodness */
 .container:after { content: "\0020"; display: block; height: 0; clear: both; visibility: hidden; }
@@ -523,7 +494,7 @@ a.popup-with-zoom-anim img {
 	cursor: pointer;
 }
 .tm-head-grid:hover {
-	background:  #DB5941;
+	background:  #0152a3;
 }
 .tm-head-grid {
 	width: 30.9%;
@@ -1123,14 +1094,14 @@ display:none;
 		width: 91%;
 	}
 	.logo{
-		display: block;
-		float: right;
-		margin: -16px 10px 0 0;
+        display: block; /* Asegúrate de que se muestre */
+        max-width: 100px; /* Ajusta el tamaño del logotipo para pantallas pequeñas */
+        margin: 0 auto; /* Centra el logotipo */
 	}
 	div.header {
 		position: relative;
 		background: #004283;
-		padding: 4% 0;
+		padding: 3% 0;
 		height: 0px;
 	}
 	.nav-active, .nav-active-inner .nav-inner {
@@ -1150,6 +1121,7 @@ display:none;
 		margin: 6px 0 10px;
 	}
 	a.button.scroll {
+		top: 300px;
 		left: 47.5%;
 	}
 	#services > div > div> img {
@@ -1222,7 +1194,7 @@ display:none;
 		width:95%;
 	}
 	div.header {
-		padding: 4.4% 0;
+		padding: 4% 2%;
 	}
 	#services > div > div> img {
 		width: 66%;
@@ -1300,7 +1272,7 @@ display:none;
 		font-size: 0.8755em;
 	}
 	a.button.scroll {
-		top: 223px;
+		top: 80%;
 		left: 47%;
 		padding: 0;
 	}
@@ -1347,38 +1319,7 @@ display:none;
 	.text span,.text_p span  {
 		font-size: 0.82355em;
 	}
-	.contact_form input[type="text"], .contact_form textarea {
-		padding: 10px 35px 10px 10px;
-		width: 81%;
-	}
-	.form span label {
-		top: 8px;
-	}
-	.fun-head-grid img {
-		padding: 38px;
-	}
-	.blog-left {
-		width: 95%;
-		float: none;
-	}
-	.blog-right {
-		width: 95%;
-		margin-top: 12px;
-		float: none;
-	}
-	iframe {
-		height: 120px;
-	}
-	.pricing-grid3 {
-		display: none;
-	}
-	.form {
-		width: 93%;
-		margin:0;
-	}
-	.form input[type="text"] {
-		width: 52%;
-	}
+
 	.bottom-social-icons {
 		width: 50%;
 	}
