--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,39 @@ body {
 	font-family: 'Noto Sans', sans-serif;
 	background:#ffffff;
 }
+
 .wrap {
 	width: 80%;
 	margin: 0px auto;
 }
+
+.sticky-social {
+	position: fixed;
+	right: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	display: flex;
+	flex-direction: column;
+}
+.sticky-social a {
+	display: block;
+	width: 40px;
+	height: 40px;
+	color: white;
+	text-align: center;
+	line-height: 40px;
+	margin: 5px 0;
+	text-decoration: none;
+	transition: all 0.3s ease;
+}
+.sticky-social a:hover {
+	width: 50px;
+}
+.facebook { background-color: #3b5998; }
+.instagram { background-color: #e4405f; }
+.tiktok { background-color: #000000; }
+.gmail { background-color: #D44638; }
+
 .logo{
 	display:none;
 }
@@ -542,24 +571,7 @@ a.button.scroll:hover {
 	width: 60%;
 }
 /*--//team-info--*/
-.top-social-icons li{
-	display: inline-block;
-	margin: 1.2em 0.3em;
-}
-.top-social-icons li a{
-	width:30px;
-	height:30px;
-	display:block;
-}
-.twitter{
-	background:url(../images/top-social-icons.png) no-repeat 0px 0px;
-}
-.facebook{
-	background: url(../images/top-social-icons.png) no-repeat -82px 0px;
-}
-.pin{
-	background: url(../images/top-social-icons.png) no-repeat -207px 0px;
-}
+
 /*--------social simptip--------*/
 [data-tooltip] {
 	position: relative;
@@ -933,38 +945,6 @@ display:none;
 }
 .bottom-footer {
 	padding: 7% 0;
-}
-.bottom-social-icons li{
-	display: inline-block;
-	margin: 0.5em 0.2em;
-}
-.bottom-twitter {
-	background: url(../images/top-social-icons.png) no-repeat 12px -20px #D2D2D1;
-}
-.bottom-twitter:hover {
-	background: url(../images/top-social-icons.png) no-repeat 12px 12px #D2D2D1;
-}
-.bottom-facebook{
-	background: url(../images/top-social-icons.png) no-repeat -31px -21px #D2D2D1;
-}
-.bottom-facebook:hover{
-	background: url(../images/top-social-icons.png) no-repeat -31px 10px #D2D2D1;
-}
-.bottom-pin{
-	background: url(../images/top-social-icons.png) no-repeat -75px -20px #D2D2D1;
-}
-.bottom-pin:hover{
-	background: url(../images/top-social-icons.png) no-repeat -75px 12px #D2D2D1;
-}
-.bottom-google{
-	background:url(../images/top-social-icons.png) no-repeat -115px -21px #D2D2D1;
-}
-.bottom-google:hover{
-	background:url(../images/top-social-icons.png) no-repeat -115px 11px #D2D2D1;
-}
-.bottom-social-icons {
-	width: 18%;
-	margin: 0 auto;
 }
 /*---End-footer----*/
 /* topup */
